# rustypdf

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
pdf_manipulator/: __init__.py  cli.py
rustypdf/: __init__.py  __main__.py  _rust.py
src/: lib.rs
