[package]
name = "pdf_manipulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pdf_manipulator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
lopdf = "0.34.0"
image = "0.25.0"
thiserror = "1.0"
