[package]
name = "rustypdf"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool to compress and merge PDFs (Rust backend via PyO3)"
authors = ["Shyam Sundar <rampallishyam2@gmail.com>"]

[lib]
name = "_rustypdf"
crate-type = ["cdylib"]

# Python package metadata
[package.metadata.maturin]
name = "rustypdf"
python-module = "rustypdf"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
lopdf = "0.32" # merging & object editing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
thiserror = "1"
