[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

# We'll let Maturin generate the metadata from Cargo.toml

[tool.maturin]
module-name = "_rustypdf"
python-source = "rustypdf"
include = ["LICENSE", "README.md"]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"
